<resources>
    <string name="app_name">Sega</string>
    <string name="Phone">Phone</string>
    <string name="Password">Password</string>
    <string name="login">Sign In</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="signUp">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="verify">A verification message has been sent to this e-mail</string>
    <string name="verify2"> and contains a link, Did you click on the link?</string>
    <string name="resend">Resend</string>
    <string name="Profile">Profile</string>
    <string name="newGameWithPC">New game with computer</string>
    <string name="newGameWithFriendOffline">New game with friend offline</string>
    <string name="newGameWithFriendOnline">New game with friend online</string>
    <string name="welcome">Welcome to Sega</string>
    <string name="chat">Chats</string>
    <string name="favorite">Favorite</string>
    <string name="newGame">New game</string>
    <string name="back">Back</string>
    <string name="congratulations">Congratulations,</string>
    <string name="hardLuck">Hard luck,</string>
    <string name="participants">Participants</string>
    <string name="next">Next</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="verification">Verification</string>
    <string name="Email">Email</string>
    <string name="emailErrorEmpty">Enter your email</string>
    <string name="passwordErrorEmpty">Enter your password</string>
    <string name="emailError">Your email is incorrect</string>
    <string name="passwordError">Your password is incorrect</string>
    <string name="passwordErrorShort">The password must be 6 or more characters</string>
    <string name="emailErrorForgetPassword">Enter your email, then click Forget password button</string>
    <string name="checkEmail">Check your email now !</string>
    <string name="nameErrorEmpty">Enter your name</string>
    <string name="notEqualPassword">Two password not equal</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="questionResend">Not received code?</string>
    <string name="goToEmail">Open the email and click on the link and then come back here !</string>
    <string name="signUpLoading">Sign Up ...</string>
    <string name="noPermission">No permission</string>
    <string name="signOut">Sign Out</string>
    <string name="signOutLoading">Sign Out ...</string>
    <string name="zero">0 – 0</string>

    <string name="playWithPC">Play with computer</string>
    <string name="playWithFriendOffline">Play with friend offline</string>
    <string name="playWithFriendOnline">Play with friend online</string>
    <string name="dislike">Dislike</string>
    <string name="like">Like</string>
    <string name="copyLink">Copy link</string>
    <string name="shareLink">Share link</string>
    <string name="finish">Your friend is out of the game</string>
    <string name="send">Send</string>
    <string name="write">Enter message</string>
    <string name="play">Play</string>
    <string name="segaOwner">Sega Owner</string>
    <string name="verify3">Verify</string>

</resources>