<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/_20sdp"
    android:paddingBottom="@dimen/_30sdp"
    android:orientation="vertical"
    android:gravity="center"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/win"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:src="@drawable/success"
        app:tint="@color/appColor"
        android:contentDescription="@string/chat"/>

    <TextView
        android:id="@+id/congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/congratulations"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:textColor="@color/appColor"/>

    <Button
        android:id="@+id/newGame"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/newGame"
        android:textAllCaps="false"
        android:textSize="@dimen/_20ssp" />

    <Button
        android:id="@+id/back"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="@dimen/_20ssp" />

</LinearLayout>