<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".fragment.FriendsFragment">

    <ImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_20sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/welcome"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_25sdp"
            android:textSize="@dimen/_20ssp"
            android:textColor="@color/appColor"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_25sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/newGameWithPC"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/newGameWithPC"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp" />

            <Button
                android:id="@+id/newGameWithFriendOffline"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/newGameWithFriendOffline"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp" />

            <Button
                android:id="@+id/newGameWithFriendOnline"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/newGameWithFriendOnline"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>