<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_25sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/box1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:hint="@string/Phone"
                app:boxStrokeWidth="@dimen/_1sdp"
                app:suffixText="+2"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:boxBackgroundColor="@color/hint"
                app:errorIconDrawable="@drawable/error"
                app:startIconDrawable="@drawable/phone">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textColor="?attr/colorControlNormal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/box2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:hint="@string/Password"
                app:boxStrokeWidth="@dimen/_1sdp"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:boxBackgroundColor="@color/hint"
                app:errorIconDrawable="@drawable/error"
                app:startIconDrawable="@drawable/lock">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="?attr/colorControlNormal" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="@dimen/_20ssp" />

            <TextView
                android:id="@+id/forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/forgetPassword"
                android:textColor="@color/appColor"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/signUp"
        android:textAllCaps="false"
        android:textSize="@dimen/_20ssp" />

</LinearLayout>