<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".activity.RegistrationActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_15sdp"
        app:cardElevation="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_25sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/box1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:hint="@string/name"
                app:boxStrokeWidth="@dimen/_1sdp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:boxBackgroundColor="@color/hint"
                app:errorIconDrawable="@drawable/error"
                app:startIconDrawable="@drawable/person">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete"
                    android:textColor="?attr/colorControlNormal" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/box2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:hint="@string/Phone"
                app:boxStrokeWidth="@dimen/_1sdp"
                app:suffixText="+2"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:boxBackgroundColor="@color/hint"
                app:errorIconDrawable="@drawable/error"
                app:startIconDrawable="@drawable/phone">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textColor="?attr/colorControlNormal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/box3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:hint="@string/Password"
                app:boxStrokeWidth="@dimen/_1sdp"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:boxBackgroundColor="@color/hint"
                app:errorIconDrawable="@drawable/error"
                app:startIconDrawable="@drawable/lock">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="?attr/colorControlNormal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/box4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:hint="@string/confirmPassword"
                app:boxStrokeWidth="@dimen/_1sdp"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:boxBackgroundColor="@color/hint"
                app:errorIconDrawable="@drawable/error"
                app:startIconDrawable="@drawable/lock">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="?attr/colorControlNormal" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textSize="@dimen/_20ssp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>